--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-03  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-02-02  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
