2004-02-03  Manish Singh  <yosh@gimp.org>
        * gimptool-2.0.in: use GIMP_API_VERSION.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12263 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-03  Manish Singh  <yosh@gimp.org>
+
+	* gimptool-2.0.in: use GIMP_API_VERSION.
+
 2004-02-03  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c
