--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2004-02-03  Manish Singh  <yosh@gimp.org>
 
+	* configure.in: Allow generated files with versions.
+
+	* gimp-2.0.pc.in
+	* gimpthumb-2.0.pc.in
+	* gimpui-2.0.pc.in
+	* docs/gimp-1.3.1.in
+	* docs/gimp-remote-1.3.1.in
+	* docs/gimprc-1.3.5.in
+	* docs/gimptool-2.0.1.in: renamed to unversioned files.
+
+	I left gimptool-2.0.in alone since I didn't want to screw with
+	other branches history. It'll be obsolete post-2.0 anyway.
+
+2004-02-03  Manish Singh  <yosh@gimp.org>
+
 	* plug-ins/maze/maze_face.c (maze_dialog): remove unused variable
 	randomize.
 
