--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-03 Alastair McKinstry <mckinstry@computer.org>
+
+	* ga.po: Updated Irish translation.
+
 2004-02-02  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
