2004-02-04  Sven Neumann  <sven@gimp.org>
	* app/gui/image-menu.c (image_menu_entries): added percentages to
	the View->Zoom menu entries as suggested in bug #131563.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12268 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-04  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/image-menu.c (image_menu_entries): added percentages to
+	the View->Zoom menu entries as suggested in bug #131563.
+
+2004-02-04  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimprc.[ch]: added the new function
 	gimp_rc_set_unknown_token() to get autosave working for unknown
 	gimprc tokens.
