--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-02-03 Alastair McKinstry <mckinstry@computer.org>
 
 	* ga.po: Updated Irish translation.
