--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-04  Sven Neumann  <sven@gimp.org>
+
+	* docs/Makefile.am (EXTRA_DIST): removed redundant entries that
+	became invalid when the change to unversioned files was made.
+
 2004-02-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-render.c (struct RenderInfo)
