2004-02-04  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am (dist-hook): create an unversioned gimprc manpage.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12275 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-04  Sven Neumann  <sven@gimp.org>
 
+	* app/Makefile.am (dist-hook): create an unversioned gimprc manpage.
+
+2004-02-04  Sven Neumann  <sven@gimp.org>
+
 	* Made 2.0pre3 release.
 
 2004-02-04  Sven Neumann  <sven@gimp.org>
