2004-02-04  Sven Neumann  <sven@gimp.org>
	* app/core/gimpchannel.c
	* app/tools/gimptexttool.c
	* app/vectors/gimpvectors.c
	* app/widgets/gimpbufferview.c: removed double semicolons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12277 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-04  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpchannel.c
+	* app/tools/gimptexttool.c
+	* app/vectors/gimpvectors.c
+	* app/widgets/gimpbufferview.c: removed double semicolons.
+
+2004-02-04  Sven Neumann  <sven@gimp.org>
+
 	* app/Makefile.am (dist-hook): create an unversioned gimprc manpage.
 
 2004-02-04  Sven Neumann  <sven@gimp.org>
