--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-02-04  Pablo G. del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
