--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-02-05  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-pdb.c (pygimp_param_from_tuple): Translate
+	None to NULL when passing strings.
+
+	* plug-ins/pygimp/gimpui.py: Pass None for brush, pattern, and
+	gradient get_list so they work. Redo selection list to use a
+	TreeView. Quickie solution for now, it could be much better.
+
 2004-02-04  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: Resurrected several autoconf substitutions relating
