--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-05  DindinX  <david@dindinx.org>
+
+	* plug-ins/script-fu/scripts/text-circle.scm: Fixes the layout of the
+	rendered text.
+
+	Fixes bug #131634
+
 2004-02-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-crop.c: removed trailing whitespace.
