--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_main.c (dialog): quit the main loop when
+	the dialog is destroyed. Fixes bug #133532.
+
 2004-02-05  DindinX  <david@dindinx.org>
 
 	* plug-ins/script-fu/scripts/text-circle.scm: Fixes the layout of the
