--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Robert Sedak  <robert.sedak@sk.htnet.hr>
+
+	* hr.po: Updated Croatian translation.
+
 2004-02-05  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
