2004-02-05  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c (gimp_display_shell_mask_bounds):
	fixed integer/boolean confusion: s/0/FALSE/.

	(gimp_display_shell_draw_cursor): draw the cursor only if
	shell->have_cursor is TRUE.

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_expose): call the above unconditionally.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12292 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-02-05  Michael Natterer  <mitch@gimp.org>
 
+	* app/display/gimpdisplayshell.c (gimp_display_shell_mask_bounds):
+	fixed integer/boolean confusion: s/0/FALSE/.
+
+	(gimp_display_shell_draw_cursor): draw the cursor only if
+	shell->have_cursor is TRUE.
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_canvas_expose): call the above unconditionally.
+
+2004-02-05  Michael Natterer  <mitch@gimp.org>
+
 	Disallow editing of data objects which have no save functionality.
 	Also fixed the misassumption that "deletable" is always equal to
 	"writable". Fixes bug #133456.
