--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-06  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* de.po: Fixed Portait <-> Landscape.
+
 2004-02-05  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
 	* hr.po: Updated Croatian translation.
