--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-06  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-01-27  Pablo G. del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation.
