--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-06  Sven Neumann  <sven@gimp.org>
+
+	* app/app-sections.txt: updated.
+
 2004-01-28  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/tmpl/gimpdatafiles.sgml
